[package]
name = "uart_async_txrx"
version = "0.1.0"
edition = "2021"

[lib]
name = "uart_async_txrx"
path = "src/lib.rs"

[dependencies]
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-time = { version = "0.5.0" }
embassy-nrf = { version = "0.8.0", features = [
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
] }
heapless = "0.8.0"
rtt-target = "0.6"
futures = { version = "0.3.29", default-features = false }

[package.metadata.docs.rs]
all-features = true

[features]
# Select queue capacity. Default uses 256 entries.
default = ["queue_256", "nrf52832"]
queue_32 = []
queue_64 = []
queue_128 = []
queue_256 = []
queue_512 = []

nrf52832 = ["embassy-nrf/nrf52832"]
nrf52840 = ["embassy-nrf/nrf52840"]
